--- a/form-inclusao-json.html
+++ b/form-inclusao-json.html
@@ -37,7 +37,7 @@
             <input type="submit">
         </p>
     </form>
- <script src="js/ajax-submit.js"></script>
+ <script src="js/cliente-insert-json.js"></script>
  <div id="resp"></div>
     </main>
     <footer>
